fixed: website and gap issues

--- a/style/style.css
+++ b/style/style.css
@@ -60,6 +60,7 @@
 #description {
   width: 70%;
   margin: auto;
+  margin-top: 80px;
 }
 
 #description>h3 {
@@ -198,9 +199,10 @@ table {
 }
 
 .stats {
+  width: 150px;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 5px;
   margin: auto;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 10px;
@@ -221,3 +223,9 @@ table {
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
+
+.stats:hover, #stackImg:hover {
+  background-color: var(--bg-yellow);
+}
+
+
